@@ -33,6 +33,8 @@ import org.apache.pig.data.Tuple;
 import org.apache.pig.impl.PigContext;
 import org.apache.pig.impl.logicalLayer.FrontendException;
 import org.apache.pig.impl.logicalLayer.schema.Schema;
+import org.apache.pig.impl.util.UDFContext;
+import org.apache.pig.LoadPushDown.RequiredFieldList;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.PigLogger;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.PigProgressable;
 
@@ -69,7 +71,7 @@ public abstract class EvalFunc<T>  {
      * should be logged to this via {@link PigLogger#warn}.
      */
     protected PigLogger pigLogger;
-
+    
     private static int nextSchemaId; // for assigning unique ids to UDF columns
     protected String getSchemaName(String name, Schema input) {
         String alias = name + "_";
@@ -292,5 +294,16 @@ public abstract class EvalFunc<T>  {
     
     public Log getLogger() {
     	return log;
+    }
+    
+    /**
+     * This method will be called by Pig both in the front end and back end to
+     * pass a unique signature to the {@link EvalFunc}. The signature can be used
+     * to store into the {@link UDFContext} any information which the 
+     * {@link EvalFunc} needs to store between various method invocations in the
+     * front end and back end.
+     * @param signature a unique signature to identify this EvalFunc
+     */
+    public void setUDFContextSignature(String signature) {
     }
 }
