@@ -21,13 +21,17 @@ package org.apache.pig.newplan.logical.expression;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Properties;
+
 import org.apache.pig.EvalFunc;
 import org.apache.pig.FuncSpec;
+import org.apache.pig.ResourceSchema;
 import org.apache.pig.builtin.Nondeterministic;
 import org.apache.pig.data.DataType;
 import org.apache.pig.impl.PigContext;
 import org.apache.pig.impl.logicalLayer.FrontendException;
 import org.apache.pig.impl.logicalLayer.schema.Schema;
+import org.apache.pig.impl.util.UDFContext;
 import org.apache.pig.newplan.Operator;
 import org.apache.pig.newplan.OperatorPlan;
 import org.apache.pig.newplan.PlanVisitor;
@@ -39,11 +43,16 @@ public class UserFuncExpression extends LogicalExpression {
 
     private FuncSpec mFuncSpec;
     private EvalFunc<?> ef = null;
+    private String signature;
+    private static int sigSeq=0;
     
     public UserFuncExpression(OperatorPlan plan, FuncSpec funcSpec) {
         super("UserFunc", plan);
         mFuncSpec = funcSpec;
         plan.add(this);
+        if (signature==null) {
+            signature = Integer.toString(sigSeq++);
+        }
     }
     
     
@@ -170,6 +179,8 @@ public class UserFuncExpression extends LogicalExpression {
         // This significantly optimize the performance of frontend (PIG-1738)
         if (ef==null)
             ef = (EvalFunc<?>) PigContext.instantiateFuncFromSpec(mFuncSpec);
+        
+        ef.setUDFContextSignature(signature);
         Schema udfSchema = ef.outputSchema(Util.translateSchema(inputSchema));
 
         if (udfSchema != null) {
@@ -198,6 +209,7 @@ public class UserFuncExpression extends LogicalExpression {
                     lgExpPlan,
                     this.getFuncSpec().clone() );
             
+            copy.signature = signature;
             // Deep copy the input expressions.
             List<Operator> inputs = plan.getSuccessors( this );
             if( inputs != null ) {
@@ -231,6 +243,10 @@ public class UserFuncExpression extends LogicalExpression {
         msg.append(")");
 
         return msg.toString();
+    }
+    
+    public String getSignature() {
+        return signature;
     }
 
 }
