@@ -3882,6 +3882,27 @@ store E into ':OUTPATH:';\,
                                 store D into ':OUTPATH:';?,
                     }
                 ],
+            },{
+                'name' => 'UDFContext',
+                'tests' => [
+                    {
+                        # See PIG-2338
+                        'num' => 1,
+                        'pig' => q?register :FUNCPATH:/testudf.jar
+                                a = load ':INPATH:/singlefile/studenttab10k' AS (a0);
+                                b = foreach a generate org.apache.pig.test.udf.evalfunc.UDFContextTestUDF(a0);
+                                c = load ':INPATH:/singlefile/studenttab10k' AS (c0:chararray);
+                                d = foreach c generate org.apache.pig.test.udf.evalfunc.UDFContextTestUDF(c0);
+                                e = union b, d;
+                                store e into ':OUTPATH:';?,
+                        'verify_pig_script' => q?a = load ':INPATH:/singlefile/studenttab10k' AS (a0);
+                                b = foreach a generate '{a0: bytearray}';
+                                c = load ':INPATH:/singlefile/studenttab10k' AS (c0:chararray);
+                                d = foreach c generate '{c0: chararray}';
+                                e = union b, d;
+                                store e into ':OUTPATH:';?,
+                    }
+                ],
             },
         ],
     },
