@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2338: Need signature for EvalFunc (daijy)
+
 OPTIMIZATIONS
 
 BUG FIXES
